--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
 			{
 				"language": "javascript",
 				"path": "./snippets/snippets.json"
+			},
+      {
+				"language": "javascriptreact",
+				"path": "./snippets/snippets.json"
 			}
 		]
 	}
