--- a/package.json
+++ b/package.json
@@ -31,6 +31,14 @@
 			{
 				"language": "javascriptreact",
 				"path": "./snippets/snippets.json"
+			},
+			{
+				"language": "typescript",
+				"path": "./snippets/snippets.json"
+			},
+			{
+				"language": "typescriptreact",
+				"path": "./snippets/snippets.json"
 			}
 		]
 	}
